Fixed Overlyy z-index

--- a/components/Navigation/Navigation.scss
+++ b/components/Navigation/Navigation.scss
@@ -88,7 +88,7 @@
 
   width: 100%;
   height: 100vh;
-  z-index: 0;
+  z-index: 1;
 
   cursor: pointer;
   transform-origin: right;
